# AppHub

./: .env.example  .gitignore  README.md
apphub-client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apphub-client/src/: App.vue  main.ts
apphub-client/src-tauri/: Cargo.toml  tauri.conf.json
apphub-client/src-tauri/capabilities/: admin.json  default.json
apphub-client/src-tauri/icons/: icon.icns
apphub-client/src-tauri/src/: main.rs
apphub-client/src-tauri/src/api/: mod.rs
apphub-client/src-tauri/src/commands/: auth.rs  config.rs  download.rs  mod.rs  scan.rs  system.rs
apphub-client/src-tauri/src/services/: heartbeat.rs  mod.rs  scanner.rs
apphub-client/src-tauri/src/utils/: logger.rs
apphub-client/src/router/: index.ts
apphub-client/src/stores/: auth.ts  config.ts  index.ts
apphub-client/src/styles/: main.css
apphub-client/src/utils/: request.ts
apphub-client/src/views/: DashboardView.vue  DownloadView.vue  HomeView.vue  LoginView.vue  NotFoundView.vue  SettingsView.vue  SoftwareView.vue
apphub-client/src/views/admin/: AdminBlacklistScan.vue  AdminBlacklists.vue  AdminCategories.vue  AdminDashboard.vue  AdminUsers.vue  (+3 more)
apphub-server/: .env  .env.example  Cargo.toml  README.md  apphub.db  generate_hash.rs
apphub-server/migrations/: 001_create_users.sql  002_create_roles.sql  003_create_softwares.sql  004_create_blacklists.sql  005_create_clients.sql  006_create_scan_reports.sql  007_create_categories.sql  008_add_software_platform.sql  009_add_more_categories.sql  010_create_scan_records.sql
apphub-server/src/: lib.rs  main.rs
apphub-server/src/api/: mod.rs  routes.rs
apphub-server/src/api/dto/: request.rs  response.rs
apphub-server/src/api/handlers/: auth.rs  blacklist.rs  category.rs  client.rs  mod.rs  report.rs  role.rs  software.rs  user.rs
apphub-server/src/api/middleware/: auth.rs  authz.rs  cors.rs  mod.rs
apphub-server/src/config/: database.rs  mod.rs
apphub-server/src/constants/: mod.rs
apphub-server/src/error/: mod.rs
apphub-server/src/models/: blacklist.rs  category.rs  client.rs  mod.rs  role.rs  scan_record.rs  scan_report.rs  software.rs  user.rs
apphub-server/src/services/: auth_service.rs  blacklist_service.rs  cache_service.rs  category_service.rs  file_service.rs  mod.rs  report_service.rs  scan_record_service.rs  software_service.rs  user_service.rs
apphub-server/src/utils/: jwt.rs  password.rs  response.rs
docs/: 01-系统总体设计.md  02-数据库设计.md  03-API接口设计.md  04-Server端详细设计.md  05-Client端详细设计.md
docs_dev/bugs/: bug1.md  bug2.md  bug3.md  bug4.md  bug5.md
