[package]
name = "apphub-server"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["AppHub Team"]
description = "应用中心服务端 - 企业软件管理平台"

[dependencies]
# Web框架
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 数据库
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 配置管理
config = "0.14"
dotenvy = "0.15"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 认证
jsonwebtoken = "9"
bcrypt = "0.15"

# 文件处理
sha2 = "0.10"
md5 = "0.7"

# 工具库
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"
validator = { version = "0.16", features = ["derive"] }
percent-encoding = "2.3"

# API文档
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

[dev-dependencies]
# 测试
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
