[package]
name = "apphub-client"
version = "1.0.0"
description = "应用中心客户端"
edition = "2021"
rust-version = "1.70"
authors = ["AppHub Team"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri核心
tauri = { version = "2.0", features = [] }
tauri-plugin-notification = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-http = "2.0"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 系统信息
sysinfo = "0.29"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
thiserror = "1.0"

# 工具库
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4"] }
whoami = "1.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
